# threebot

./: CONFIG.md  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  example-config.yml
.github/workflows/: ci.yml  release.yml
src/: audio.rs  config.rs  error.rs  main.rs  session.rs  session_tests.rs  util.rs  verifier.rs
src/alias/: manager.rs  mod.rs
src/audio/: effects.rs  normalizer.rs
src/commands/: alias.rs  bind.rs  farewell.rs  greeting.rs  mod.rs  ping.rs  sound.rs  sounds.rs
src/database/: connection.rs  migrations.rs  mod.rs
src/database/entities/: aliases.rs  mod.rs  sounds.rs  user_settings.rs
src/protos/: mod.rs
src/sounds/: manager.rs  mod.rs
src/user_settings/: manager.rs  mod.rs
