[package]
name = "threebot"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive"] }
dirs = "6.0.0"
futures = "0.3.31"
log = "0.4.27"
opus = "0.3.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
tracing-log = "0.2"
protobuf = "3.7.2"
rand = "0.8"
rusqlite = { version = "0.37.0", features = ["bundled", "chrono"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.31.0"
rustls = "0.23.28"
rustls-pki-types = "1.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
sha2 = "0.10.9"
tokio = { version = "1.45.1", features = ["full"] }
tokio-rustls = "0.26.2"
webpki-roots = "1.0.1"

[build-dependencies]
protobuf-codegen = "3.7.2"
